lesson8/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geekbrains
  annotations:
          kubernetes.io/ingress.class: nginx-external
spec:
  rules:
    - host: postgres.stage.info
      http:
         paths:
           - path: /users
             pathType: Prefix
             backend:
                service:
                  name: prometheus
                  port:
                     number: 8080
